syntax="proto3";

import "google/protobuf/timestamp.proto";

package events;

enum DebugTunnelType {
  DebugTunnelTypeUnknown = 0;
  DebugTunnelTypeSSH = 1;
  DebugTunnelTypeOpenVPN = 2;
}

message DebugTunnelInfo {
  string id = 1;
  DebugTunnelType type = 2;
  string device_sn = 3;
  google.protobuf.Timestamp timestamp = 4;
}
