syntax="proto3";

import "google/protobuf/timestamp.proto";

package events;

message USBDeviceInfo {
  uint32 vendor_id = 1;
  uint32 product_id = 2;
  string device_name = 3;
  bool is_networking_device = 4;
  string network_interface_name = 5;
  string device_sn = 6;
  google.protobuf.Timestamp timestamp = 7;
}
