syntax="proto3";

import "google/protobuf/timestamp.proto";

package events;

message OSInfo {
  string product_name = 1;
  string product_version = 2;
  string extra_os_info = 3;
  bytes dhcp_packet = 4;
}

message ClientInfo {
  string login_name = 1;
  string hostname = 2;
  bytes mac_addr = 3;
  repeated bytes ipv4_addr = 4;
  repeated bytes ipv6_addr = 5;
  OSInfo os = 6;
  string device_sn = 7;
  google.protobuf.Timestamp timestamp = 8;
}

message UserInfo {
  string login_name = 1;
  int64 login_time = 2;
  repeated bytes ipv4_addr = 3;
  repeated bytes ipv6_addr = 4;
  string device_sn = 5;
  google.protobuf.Timestamp timestamp = 6;
  string user_group = 7;
}
