syntax="proto3";

import "google/protobuf/timestamp.proto";

package events;

message DebugWanoptNetstat {
  string device_sn = 1;
  google.protobuf.Timestamp timestamp = 2;
  string wanopt_netstat = 3;
};
