syntax="proto3";

import "google/protobuf/timestamp.proto";

package events;

message PacketCaptureReport {
  string pcap_task = 1;
  string data = 2;
  string device_sn = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message PacketCaptureUploadedMessage {
  string device_sn = 1;
  google.protobuf.Timestamp timestamp = 2;
  string pcap_task = 3;
  bool success = 4;
  string message = 5;
}
