syntax="proto3";

import "google/protobuf/timestamp.proto";

package events;

enum VPNEventType {
  VPN_CONNECTED = 0;
  VPN_DISCONNECTED = 1;
  VPN_REKEY = 2;
  VPN_ERROR = 3;
  VPN_INIT = 4;
}

enum PolicyMode {
  PolicyModeRange = 0;
  PolicyModeSubnet = 1;
}

message VPNPeerInfo {
  string peer_addr = 1;
  bool peer_is_server = 2;
}

message VPNPolicy {
    PolicyMode policy_mode = 1;
}

message IKE {
  uint32 spi_i = 1;
  uint32 spi_r = 2;
  string alg = 3;
  uint64 cipher_key = 4;
}

message IPSec {
  uint32 spi_i = 1;
  uint32 spi_o = 2;
  uint32 peer_handle = 3;
}

message VPNConnInfo {
  string tunnel_name = 1;
  string interface_name = 2;
  string vpn_type = 3;

  bytes local_addr = 4;
  uint32 local_port = 5;
  bytes remote_addr = 6;
  uint32 remote_port = 7;
  VPNPolicy local_policy = 8;
  VPNPolicy remote_policy = 9;

  IKE ike = 10;
  IPSec ipsec = 11;
}

message VPNEvent {
  VPNEventType event_type = 1;
  VPNConnInfo connection_info = 2;

  VPNPeerInfo peer_info = 3;
  uint64 uptime = 4;
  uint32 timeout = 5;

  string msg = 6;

  string device_sn = 7;
  google.protobuf.Timestamp timestamp = 8;
}

message VPNTestResult {
  string connection_name = 1;
  string device_sn = 2;
  google.protobuf.Timestamp timestamp = 3;
}
