syntax = "proto3";

package metrics;

import "common.proto";
import "cubs_periodical_report.proto";
import "cubs_linkquality.proto";
import "cubs_interface_livemon.proto";
import "cubs_vpn_traffic.proto";
import "cubs_system.proto";

service Cubs {
  rpc ReportTrafficInfo (AccumulatedTraffic) returns (Empty) {};
  rpc ReportFlowTrafficInfo (FlowTrafficInfo) returns (Empty) {};
  rpc ReportLinkQuality (LinkQuality) returns (Empty) {};
  rpc ReportLiveInfo (LiveReport) returns (Empty) {};
  rpc ReportVPNTrafficInfo (VPNTrafficInfo) returns (Empty) {};
  rpc ReportSystemLoad (SystemLoad) returns (Empty) {};
}
